# traderdaddy-sdk

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
.github/workflows/: publish-python.yml
docs/: BUILDING-APPS.md  ECOSYSTEM.md  PROMPTS.md  README.md
docs/aggregators/: connecttrade.md  snaptrade.md  trade-agent.md  truthifi.md
docs/brokers/: alpaca.md  coinbase.md  etoro.md  etrade.md  fidelity.md  index.md  interactive-brokers.md  moomoo.md  public.md  robinhood.md  schwab.md  tastytrade.md  tradestation.md  tradier.md  trading212.md  vanguard.md  webull.md
examples/: 01-flow-tape.mjs  02-gamma-ladder.mjs  03-market-hours-poll.mjs  04-iv-and-strategies.mjs  05-demo-to-live.mjs  06-backoff-and-errors.mjs  README.md
python/: .gitignore  README.md  pyproject.toml
python/tests/: test_cache.py  test_market_hours.py  test_mock.py
python/traderdaddy/: __init__.py  backoff.py  cache.py  client.py  errors.py  market_hours.py  transport.py  types.py
python/traderdaddy/mock/: __init__.py  fixtures.py
src/: backoff.ts  cache.ts  client.ts  errors.ts  index.ts  marketHours.ts  transport.ts  types.ts
src/mock/: fixtures.ts  index.ts
test/: sdk.test.mjs
