[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "traderdaddy"
version = "0.1.0"
description = "Typed async Python SDK for the public TraderDaddy Pro MCP API — the Python mirror of @traderdaddy/sdk."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Michael H", email = "mphinance@gmail.com" }]
keywords = ["traderdaddy", "options", "options-flow", "mcp", "trading", "home-assistant"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://traderdaddy.pro"
Source = "https://github.com/mphinance/traderdaddy-sdk"

[project.optional-dependencies]
dev = ["pytest>=8", "mypy>=1.10"]

[tool.hatch.build.targets.wheel]
packages = ["traderdaddy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
